--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/analytics": "^1.4.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
